k8s/1-express.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: staging
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express
  namespace: staging
  labels:
    app: express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: express
  template:
    metadata:
      labels:
        app: express
    spec:
      containers:
      - name: express
        image: lazizbekkahramonov/my-app:b281639e6b7554d9dff52fefc85c013c04adb2f2
        ports:
        - name: http
          containerPort: 3000
        resources:
          requests:
            memory: 64Mi
            cpu: 100m
          limits:
            memory: 128Mi
            cpu: 300m
---
apiVersion: v1
kind: Service
metadata:
  name: express
  namespace: staging
spec:
  selector:
    app: express
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  type: ClusterIP
