k8s/2_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: express
  namespace: staging
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: express
            port:
              number: 3000
      - path: /metrics
        pathType: Prefix
        backend:
          service:
            name: express
            port:
              number: 3000
